// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flexWrap renders 0 1`] = `
Array [
  .c0 {
  -webkit-flex-wrap: 0;
  -ms-flex-wrap: 0;
  flex-wrap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: 0;
  -ms-flex-wrap: 0;
  flex-wrap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: 0;
  -ms-flex-wrap: 0;
  flex-wrap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: 0;
  -ms-flex-wrap: 0;
  flex-wrap: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`flexWrap renders function 1`] = `
Array [
  .c0 {
  -webkit-flex-wrap: hasnot;
  -ms-flex-wrap: hasnot;
  flex-wrap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: has;
  -ms-flex-wrap: has;
  flex-wrap: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: hasnot;
  -ms-flex-wrap: hasnot;
  flex-wrap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: has;
  -ms-flex-wrap: has;
  flex-wrap: has;
}

<div
    className="c0"
  />,
]
`;

exports[`flexWrap renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-flex-wrap: invalid.path.1;
  -ms-flex-wrap: invalid.path.1;
  flex-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: invalid.path.1;
  -ms-flex-wrap: invalid.path.1;
  flex-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: invalid.path.1;
  -ms-flex-wrap: invalid.path.1;
  flex-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: invalid.path.1;
  -ms-flex-wrap: invalid.path.1;
  flex-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`flexWrap renders negative number 1`] = `
Array [
  .c0 {
  -webkit-flex-wrap: -54881;
  -ms-flex-wrap: -54881;
  flex-wrap: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: -54881;
  -ms-flex-wrap: -54881;
  flex-wrap: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: -42365;
  -ms-flex-wrap: -42365;
  flex-wrap: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: -42365;
  -ms-flex-wrap: -42365;
  flex-wrap: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`flexWrap renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-flex-wrap: July;
  -ms-flex-wrap: July;
  flex-wrap: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: August;
    -ms-flex-wrap: August;
    flex-wrap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: September;
    -ms-flex-wrap: September;
    flex-wrap: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: November;
    -ms-flex-wrap: November;
    flex-wrap: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-wrap: August;
    -ms-flex-wrap: August;
    flex-wrap: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: July;
  -ms-flex-wrap: July;
  flex-wrap: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: August;
    -ms-flex-wrap: August;
    flex-wrap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: September;
    -ms-flex-wrap: September;
    flex-wrap: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: November;
    -ms-flex-wrap: November;
    flex-wrap: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-wrap: August;
    -ms-flex-wrap: August;
    flex-wrap: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: January;
  -ms-flex-wrap: January;
  flex-wrap: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: December;
    -ms-flex-wrap: December;
    flex-wrap: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: April;
    -ms-flex-wrap: April;
    flex-wrap: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: May;
    -ms-flex-wrap: May;
    flex-wrap: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-wrap: June;
    -ms-flex-wrap: June;
    flex-wrap: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: January;
  -ms-flex-wrap: January;
  flex-wrap: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: December;
    -ms-flex-wrap: December;
    flex-wrap: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: April;
    -ms-flex-wrap: April;
    flex-wrap: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: May;
    -ms-flex-wrap: May;
    flex-wrap: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-wrap: June;
    -ms-flex-wrap: June;
    flex-wrap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`flexWrap renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: July;
    -ms-flex-wrap: July;
    flex-wrap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: August;
    -ms-flex-wrap: August;
    flex-wrap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: September;
    -ms-flex-wrap: September;
    flex-wrap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-wrap: November;
    -ms-flex-wrap: November;
    flex-wrap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: July;
    -ms-flex-wrap: July;
    flex-wrap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: August;
    -ms-flex-wrap: August;
    flex-wrap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: September;
    -ms-flex-wrap: September;
    flex-wrap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-wrap: November;
    -ms-flex-wrap: November;
    flex-wrap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: May;
    -ms-flex-wrap: May;
    flex-wrap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: June;
    -ms-flex-wrap: June;
    flex-wrap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: April;
    -ms-flex-wrap: April;
    flex-wrap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-wrap: November;
    -ms-flex-wrap: November;
    flex-wrap: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: May;
    -ms-flex-wrap: May;
    flex-wrap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: June;
    -ms-flex-wrap: June;
    flex-wrap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-wrap: April;
    -ms-flex-wrap: April;
    flex-wrap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-wrap: November;
    -ms-flex-wrap: November;
    flex-wrap: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`flexWrap renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-flex-wrap: July;
  -ms-flex-wrap: July;
  flex-wrap: July;
}

@media May {
  .c0 {
    -webkit-flex-wrap: August;
    -ms-flex-wrap: August;
    flex-wrap: August;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: September;
    -ms-flex-wrap: September;
    flex-wrap: September;
  }
}

@media January {
  .c0 {
    -webkit-flex-wrap: November;
    -ms-flex-wrap: November;
    flex-wrap: November;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: August;
    -ms-flex-wrap: August;
    flex-wrap: August;
  }
}

@media June {
  .c0 {
    -webkit-flex-wrap: November;
    -ms-flex-wrap: November;
    flex-wrap: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: July;
  -ms-flex-wrap: July;
  flex-wrap: July;
}

@media May {
  .c0 {
    -webkit-flex-wrap: August;
    -ms-flex-wrap: August;
    flex-wrap: August;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: September;
    -ms-flex-wrap: September;
    flex-wrap: September;
  }
}

@media January {
  .c0 {
    -webkit-flex-wrap: November;
    -ms-flex-wrap: November;
    flex-wrap: November;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: August;
    -ms-flex-wrap: August;
    flex-wrap: August;
  }
}

@media June {
  .c0 {
    -webkit-flex-wrap: November;
    -ms-flex-wrap: November;
    flex-wrap: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: April;
  -ms-flex-wrap: April;
  flex-wrap: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-flex-wrap: November;
    -ms-flex-wrap: November;
    flex-wrap: November;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: January;
    -ms-flex-wrap: January;
    flex-wrap: January;
  }
}

@media January {
  .c0 {
    -webkit-flex-wrap: December;
    -ms-flex-wrap: December;
    flex-wrap: December;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: April;
    -ms-flex-wrap: April;
    flex-wrap: April;
  }
}

@media June {
  .c0 {
    -webkit-flex-wrap: May;
    -ms-flex-wrap: May;
    flex-wrap: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: April;
  -ms-flex-wrap: April;
  flex-wrap: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-flex-wrap: November;
    -ms-flex-wrap: November;
    flex-wrap: November;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: January;
    -ms-flex-wrap: January;
    flex-wrap: January;
  }
}

@media January {
  .c0 {
    -webkit-flex-wrap: December;
    -ms-flex-wrap: December;
    flex-wrap: December;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: April;
    -ms-flex-wrap: April;
    flex-wrap: April;
  }
}

@media June {
  .c0 {
    -webkit-flex-wrap: May;
    -ms-flex-wrap: May;
    flex-wrap: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`flexWrap renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-flex-wrap: July;
    -ms-flex-wrap: July;
    flex-wrap: July;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: August;
    -ms-flex-wrap: August;
    flex-wrap: August;
  }
}

@media January {
  .c0 {
    -webkit-flex-wrap: September;
    -ms-flex-wrap: September;
    flex-wrap: September;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: November;
    -ms-flex-wrap: November;
    flex-wrap: November;
  }
}

@media June {
  .c0 {
    -webkit-flex-wrap: August;
    -ms-flex-wrap: August;
    flex-wrap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-flex-wrap: July;
    -ms-flex-wrap: July;
    flex-wrap: July;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: August;
    -ms-flex-wrap: August;
    flex-wrap: August;
  }
}

@media January {
  .c0 {
    -webkit-flex-wrap: September;
    -ms-flex-wrap: September;
    flex-wrap: September;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: November;
    -ms-flex-wrap: November;
    flex-wrap: November;
  }
}

@media June {
  .c0 {
    -webkit-flex-wrap: August;
    -ms-flex-wrap: August;
    flex-wrap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-flex-wrap: January;
    -ms-flex-wrap: January;
    flex-wrap: January;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: December;
    -ms-flex-wrap: December;
    flex-wrap: December;
  }
}

@media January {
  .c0 {
    -webkit-flex-wrap: April;
    -ms-flex-wrap: April;
    flex-wrap: April;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: May;
    -ms-flex-wrap: May;
    flex-wrap: May;
  }
}

@media June {
  .c0 {
    -webkit-flex-wrap: June;
    -ms-flex-wrap: June;
    flex-wrap: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-flex-wrap: January;
    -ms-flex-wrap: January;
    flex-wrap: January;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: December;
    -ms-flex-wrap: December;
    flex-wrap: December;
  }
}

@media January {
  .c0 {
    -webkit-flex-wrap: April;
    -ms-flex-wrap: April;
    flex-wrap: April;
  }
}

@media April {
  .c0 {
    -webkit-flex-wrap: May;
    -ms-flex-wrap: May;
    flex-wrap: May;
  }
}

@media June {
  .c0 {
    -webkit-flex-wrap: June;
    -ms-flex-wrap: June;
    flex-wrap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`flexWrap renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-flex-wrap: 54881;
  -ms-flex-wrap: 54881;
  flex-wrap: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: 54881;
  -ms-flex-wrap: 54881;
  flex-wrap: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: 42365;
  -ms-flex-wrap: 42365;
  flex-wrap: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: 42365;
  -ms-flex-wrap: 42365;
  flex-wrap: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`flexWrap renders string 1`] = `
Array [
  .c0 {
  -webkit-flex-wrap: July;
  -ms-flex-wrap: July;
  flex-wrap: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: July;
  -ms-flex-wrap: July;
  flex-wrap: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: June;
  -ms-flex-wrap: June;
  flex-wrap: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: June;
  -ms-flex-wrap: June;
  flex-wrap: June;
}

<div
    className="c0"
  />,
]
`;

exports[`flexWrap renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`flexWrap renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-flex-wrap: DarkSlateBlue;
  -ms-flex-wrap: DarkSlateBlue;
  flex-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: DarkSlateBlue;
  -ms-flex-wrap: DarkSlateBlue;
  flex-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: DarkSlateBlue;
  -ms-flex-wrap: DarkSlateBlue;
  flex-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-wrap: DarkSlateBlue;
  -ms-flex-wrap: DarkSlateBlue;
  flex-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
